--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,17 +1,13 @@
 #home {
-  background-color: #D23333;
-  color: white;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  text-align: center;
-  p {
-    margin-top: 1.5em;
-  }
-  a {
-    color: rgba(0,0,0,0.4);
-    font-weight: bold;
-    font-size: 16px;
-  }
+  background-color: rgb(250,250,250);
+  padding: 100px 0;
+  max-width: 1000px;
+}
+
+h2.text-center {
+  padding: 0 0 50px 0;
+}
+
+body {
+  background-color: rgb(250,250,250)
 }
